--- a/src/main/resources/fxml/Visualization.fxml
+++ b/src/main/resources/fxml/Visualization.fxml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="535.0" prefWidth="965.0"
-            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="controller.VisualizationController">
-    <Label layoutX="428.0" layoutY="233.0" text="Hình ảnh hóa số liệu"/>
-
-</AnchorPane>
+<AnchorPane xmlns:fx="http://javafx.com/fxml/1" fx:id="container" prefHeight="535.0" prefWidth="965.0"
+            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="controller.VisualizationController"/>
