--- a/src/main/resources/fxml/MainApp.fxml
+++ b/src/main/resources/fxml/MainApp.fxml
@@ -2,12 +2,10 @@
 
 <?import de.jensd.fx.glyphs.materialdesignicons.*?>
 <?import javafx.scene.control.*?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 <AnchorPane xmlns:fx="http://javafx.com/fxml/1" prefHeight="535.0" prefWidth="1200.0"
-            xmlns="http://javafx.com/javafx/8.0.141"
-            fx:controller="controller.MainAppController">
+            xmlns="http://javafx.com/javafx/8.0.141" fx:controller="controller.MainAppController">
     <children>
         <AnchorPane prefHeight="535.0" prefWidth="235.0" style="-fx-background-color: #1D3030;">
             <children>
@@ -73,6 +71,7 @@
                 </Button>
             </children>
         </AnchorPane>
-        <AnchorPane fx:id="content" layoutX="235.0" prefHeight="535.0" prefWidth="965.0"/>
+        <AnchorPane fx:id="content" layoutX="235.0" prefHeight="535.0" prefWidth="965.0" style="-fx-padding: 200;"
+                    AnchorPane.topAnchor="0.0"/>
     </children>
 </AnchorPane>
